# RobotPateoPelota_TFG

./: .gitignore  Dockerfile  README.md  compare_yolo_models.py  extract_frames.sh  extract_frames_rosbag.sh  my_robot_conf.rviz  requirements.txt  usb_cams.rviz
src/gazebo_simulation/src/unitree-go2-ros2/ball_kicking/: CMakeLists.txt  package.xml
src/gazebo_simulation/src/unitree-go2-ros2/ball_kicking/launch/: ball_kicking.launch.py
src/gazebo_simulation/src/unitree-go2-ros2/ball_kicking/scripts/: ball_goal_searching.py  ball_goal_searching_action_server copy.py  ball_goal_searching_action_server.py  ball_searching.py  calculate_and_move_to_ball.py  calculate_and_move_to_ball_action_server copy.py  calculate_and_move_to_ball_action_server.py  low_level_pid_controller.py  orchestrator.py
src/gazebo_simulation/src/unitree-go2-ros2/ball_kicking_interfaces/: CMakeLists.txt  package.xml
src/gazebo_simulation/src/unitree-go2-ros2/ball_kicking_interfaces/action/: DetectBallAndGoal.action
src/gazebo_simulation/src/unitree-go2-ros2/models/RoboCup15_MSL_Football/: model.sdf
src/gazebo_simulation/src/unitree-go2-ros2/models/RoboCup15_MSL_Football/meshes/: ball.dae
src/gazebo_simulation/src/unitree-go2-ros2/models/RoomWalls/: model.sdf
src/gazebo_simulation/src/unitree-go2-ros2/models/football/: model.sdf
src/gazebo_simulation/src/unitree-go2-ros2/models/robocup_3Dsim_ball/: model.sdf
src/gazebo_simulation/src/unitree-go2-ros2/models/robocup_3Dsim_goal/: model.sdf
src/gazebo_simulation/src/unitree-go2-ros2/robots/configs/go2_config/config/autonomy/: point_to_laserscan.yaml  velodyne_3d.lua
src/gazebo_simulation/src/unitree-go2-ros2/robots/configs/go2_config/launch/: gazebo_velodyne.launch.py
src/gazebo_simulation/src/unitree-go2-ros2/robots/configs/go2_config/worlds/: Room_ball_goal.world  default.world
src/gazebo_simulation/src/unitree-go2-ros2/robots/descriptions/go2_description/xacro/: camera.xacro  laser.xacro  lidar_4D_lidar.xacro  robot_VLP.xacro  wideangle_camera.xacro
src/gazebo_simulation/src/unitree-go2-ros2/yolo/yolobot_recognition/: CMakeLists.txt
src/gazebo_simulation/src/unitree-go2-ros2/yolo/yolobot_recognition/scripts/: yolo_object_distance.py  yolov8_ros2_pt.py
src/go2_ros2_sdk/src/ball_kicking/: CMakeLists.txt  package.xml
src/go2_ros2_sdk/src/ball_kicking/launch/: ball_kicking.launch.py
src/go2_ros2_sdk/src/ball_kicking/scripts/: advance copy 2.py  advance copy.py  advance.py  ball_distance copy 2.py  ball_distance copy 3.py  ball_distance copy 4.py  ball_distance copy 5.py  ball_distance copy.py  ball_distance.py  ball_distance_funcional_sin_bbox.py  ball_follower_depth.py  ball_searching.py  ball_searching_position.py  calculate_and_move_to_ball.py  detections_distance.py  front_object_distance.py  move_to_target.py  points_cloud_filter.py  points_cloud_filter_base_link.py  start_kick.py  transform_pointcloud.py
src/go2_ros2_sdk/src/docker/: Dockerfile
src/go2_ros2_sdk/src/go2_robot_sdk/go2_robot_sdk/: go2_driver_node.py
src/go2_ros2_sdk/src/go2_robot_sdk/launch/: robot.launch.py
src/go2_ros2_sdk/src/go2_robot_sdk/urdf/: go2_with_realsense.urdf
src/go2_ros2_sdk/src/object_msgs/: CMakeLists.txt  package.xml
src/go2_ros2_sdk/src/object_msgs/msg/: FrontDetection.msg  FrontDistance.msg
src/go2_ros2_sdk/src/yolo/yolobot_recognition/: CMakeLists.txt
src/go2_ros2_sdk/src/yolo/yolobot_recognition/launch/: launch_yolov8.launch.py
src/go2_ros2_sdk/src/yolo/yolobot_recognition/scripts/: .gitignore  front_video_viewer.py  yolov8_ros2_pt.py
src/go2_ros2_sdk/src/yolo/yolov8_msgs/: CMakeLists.txt  package.xml
src/go2_ros2_sdk/src/yolo/yolov8_msgs/msg/: InferenceResultPosition.msg  Yolov8InferencePosition.msg
usb_cam_params/: params_0.yaml  params_1.yaml
