<?xml version="1.0"?>
<package format="2">
  <name>ball_kicking</name>
  <version>0.0.1</version>
  <description>Paquete para seguir y patear una pelota utilizando Yolov8 y ROS 2</description>
  
  <maintainer email="samuelperezfente@gmail.com">Samuel Perez Fente</maintainer>
  
  <license>Apache-2.0</license>

  <!-- Dependencias de ejecución -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>yolov8_msgs</depend>

  <!-- Dependencias para pruebas -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

